added some chars from Eupho

--- a/waifu.yml
+++ b/waifu.yml
@@ -14,3 +14,9 @@ Isshiki Iroha:
   - Ore no Seishun
 Kousaka Kirino:
   - Oreimo
+Oumae Kumiko:
+  - Hibike! Euphonium
+Kousaka Reina:
+  - Hibike! Euphonium
+Tanaka Asuka:
+  - Hibike! Euphonium
