update waifu list

--- a/waifu.yml
+++ b/waifu.yml
@@ -1,22 +1,63 @@
-Misaka Mikoto:
+# Toaru Series
+ Misaka Mikoto:
   - To Aru Kagaku no Railgun
-Kawashima Ami:
+  
+# Toradora!  
+ Kawashima Ami:
   - Toradora!
-Aisaka Taiga:
+ Aisaka Taiga:
   - Toradora!
-Gasai Yuno:
+  
+# Love Live!
+ Yazawa Nico:
+  - Love Live!
+ Ayase Eli:
+  - Love Live!
+ Nishikino Maki:
+  - Love Live!
+ Kousaka Honoka:
+  - Love Live!
+ Toujou Nozomi:
+  - Love Live!
+ Sonoda Umi:
+  - Love Live!
+  
+  
+# Hibike! Euphonium
+ Oumae Kumiko:
+  - Hibike! Euphonium
+ Kousaka Reina:
+  - Hibike! Euphonium
+ Tanaka Asuka:
+  - Hibike! Euphonium
+
+# Oreimo
+ Aragaki Ayase:
+  - Oreimo
+ Kousaka Kirino:
+  - Oreimo
+  
+# K-ON!
+ Akiyama Mio:
+  - K-ON!
+
+# Mirai Nikki
+ Gasai Yuno:
   - Mirai Nikki 
-Aragaki Ayase:
-  - Oreimo
-Matoi Ryuuko:
+
+# Kill la Kill
+ Matoi Ryuuko:
   - Kill la Kill
-Isshiki Iroha:
+ Jakuzure Nonon:
+  - Kill la Kill
+ Harime Nui:
+  - Kill la Kill
+  
+# Ore no Seishun
+ Isshiki Iroha:
   - Ore no Seishun
-Kousaka Kirino:
-  - Oreimo
-Oumae Kumiko:
-  - Hibike! Euphonium
-Kousaka Reina:
-  - Hibike! Euphonium
-Tanaka Asuka:
-  - Hibike! Euphonium
+
+# Shakugan no Shana
+ Shana:
+  - Shakugan no Shana
+
