--- a/waifu.yml
+++ b/waifu.yml
@@ -1,6 +1,12 @@
 # Toaru Series
  Misaka Mikoto:
   - To Aru Kagaku no Railgun
+ Shirai Kuroko:
+  - To Aru Kagaku no Railgun
+ Index Librorum Prohibitorum:
+  - To Aru Kagaku no Railgun
+ Misaka Misuzu:
+  - To Aru Kagaku no Railgun
   
 # Toradora!  
  Kawashima Ami:
@@ -21,7 +27,88 @@
   - Love Live!
  Sonoda Umi:
   - Love Live!
+ Minami Kotori:
+  - Love Live!
+ Koizumi Hanayo:
+  - Love Live!
+ Hoshizora Rin:
+  - Love Live!
+ Kira Tsubasa:
+  - Love Live!
+ Toudou Erena:
+  - Love Live!
+ Yuuki Anju:
+  - Love Live!
   
+# Love Live! Sunshine!!
+ Takami Chika:
+  - Love Live! Sunshine!!
+ Sakurauchi Riko:
+  - Love Live! Sunshine!!
+ Matsuura Kanan:
+  - Love Live! Sunshine!!
+ Kurosawa Dia:
+  - Love Live! Sunshine!!
+ Watanabe You:
+  - Love Live! Sunshine!!
+ Tsushima Yoshiko:
+  - Love Live! Sunshine!!
+ Kunikida Hanamaru:
+  - Love Live! Sunshine!!
+ Ohara Mari:
+  - Love Live! Sunshine!!
+ Kurosawa Ruby:
+  - Love Live! Sunshine!!
+  
+# THE iDOLM@STER
+ Amami Haruka:
+  - THE iDOLM@STER
+ Kisaragi Chihaya:
+  - THE iDOLM@STER
+ Hagiwara Yukiho:
+  - THE iDOLM@STER
+ Takatsuki Yayoi:
+  - THE iDOLM@STER
+ Kikuchi Makoto:
+  - THE iDOLM@STER
+ Futami Mami:
+  - THE iDOLM@STER
+ Futami Ami:
+  - THE iDOLM@STER
+ Miura Azusa:
+  - THE iDOLM@STER
+ Minase Iori:
+  - THE iDOLM@STER
+ Akizuki Ritsuko:
+  - THE iDOLM@STER
+ Hoshii Miki:
+  - THE iDOLM@STER
+ Shijou Takane:
+  - THE iDOLM@STER
+ Ganaha Hibiki:
+  - THE iDOLM@STER
+ Producer-san:
+  - THE iDOLM@STER
+  
+# THE iDOLM@STER: Cinderella Girls
+ Shibuya Rin:
+  - THE iDOLM@STER: Cinderella Girls
+ Shimamura Uzuki:
+  - THE iDOLM@STER: Cinderella Girls
+ Honda Mio:
+  - THE iDOLM@STER: Cinderella Girls
+ Jougasaki Mika:
+  - THE iDOLM@STER: Cinderella Girls
+ Jougasaki Rika:
+  - THE iDOLM@STER: Cinderella Girls
+ Futaba Anzu:
+  - THE iDOLM@STER: Cinderella Girls
+ Moroboshi Kirari:
+  - THE iDOLM@STER: Cinderella Girls
+ Kanzaki Ranko:
+  - THE iDOLM@STER: Cinderella Girls
+ Anastasia:
+  - THE iDOLM@STER: Cinderella Girls
   
 # Hibike! Euphonium
  Oumae Kumiko:
@@ -30,28 +117,54 @@
   - Hibike! Euphonium
  Tanaka Asuka:
   - Hibike! Euphonium
+ Natsuki Nakagawa:
+  - Hibike! Euphonium
+ Hazuki Katou:
+  - Hibike! Euphonium
+ Sapphire Kawashima:
+  - Hibike! Euphonium
+ Yuuko Yoshikawa:
+  - Hibike! Euphonium
+ Tubacabra:
+  - Hibike! Euphonium
 
 # Oreimo
  Aragaki Ayase:
   - Oreimo
  Kousaka Kirino:
   - Oreimo
+ Ruri Gokou:
+  - Oreimo
   
 # K-ON!
  Akiyama Mio:
+  - K-ON!
+ Hirasawa Yui:
+  - K-ON!
+ Tainaka Ritsu:
+  - K-ON!
+ Kotobuki Tsumugi:
+  - K-ON!
+ Nakano Azusa:
   - K-ON!
 
 # Mirai Nikki
  Gasai Yuno:
   - Mirai Nikki 
 
-# Kill la Kill
+# KILL la KILL
  Matoi Ryuuko:
-  - Kill la Kill
+  - KILL la KILL
  Jakuzure Nonon:
-  - Kill la Kill
+  - KILL la KILL
  Harime Nui:
-  - Kill la Kill
+  - KILL la KILL
+ Kiryuin Satsuki:
+  - KILL la KILL
+ Mankanshoku Mako:
+  - KILL la KILL
+ Hououmaru Rei:
+  - KILL la KILL
   
 # Ore no Seishun
  Isshiki Iroha:
@@ -60,4 +173,62 @@
 # Shakugan no Shana
  Shana:
   - Shakugan no Shana
-
+  
+# Trinity Blood
+ Esther Blanchett:
+  - Trinity Blood
+  
+#Kantai Collection
+ Teitoku:
+  - Kantai Collection
+ Error Musume:
+  - Kantai Collection
+  
+# JoJo's Bizarre Adventures
+ Dio Brando:
+  - JoJo's Bizarre Adventures
+  
+# Jigoku Shoujo
+ Ai Enma:
+  - Jigoku Shoujo
+  
+# Puella Magi Madoka Magica
+ Kaname Madoka:
+  - Puella Magi Madoka Magica
+ Akemi Homura:
+  - Puella Magi Madoka Magica
+ Tomoe Mami:
+  - Puella Magi Madoka Magica
+ Miki Sayaka:
+  - Puella Magi Madoka Magica
+ Sakura Kyouko:
+  - Puella Magi Madoka Magica
+ Momoe Nagisa:
+  - Puella Magi Madoka Magica
+ Kyubey:
+  - Puella Magi Madoka Magica
+  
+# Yuki Yuna wa Yusha de Aru
+ Yuki Yuna:
+  - Yuki Yuna wa Yusha de Aru
+ Togo Mimori:
+  - Yuki Yuna wa Yusha de Aru
+ Inubouzaki Fu:
+  - Yuki Yuna wa Yusha de Aru
+ Inubouzaki Itsuki:
+  - Yuki Yuna wa Yusha de Aru
+ Miyoshi Karin:
+  - Yuki Yuna wa Yusha de Aru
+ Nogi Sonoko:
+  - Yuki Yuna wa Yusha de Aru
+ Minowa Gin:
+  - Yuki Yuna wa Yusha de Aru
+  
+# Shokugeki no Soma
+ Erina Nakiri:
+  - Shokugeki no Soma
+ Alice Nakiri:
+  - Shokugeki no Soma
+ Ikumi Mito:
+  - Shokugeki no Soma
+  
