--- a/waifu.yml
+++ b/waifu.yml
@@ -92,23 +92,23 @@
   
 # THE iDOLM@STER: Cinderella Girls
  Shibuya Rin:
-  - THE iDOLM@STER: Cinderella Girls
+  - THE iDOLM@STER - Cinderella Girls
  Shimamura Uzuki:
-  - THE iDOLM@STER: Cinderella Girls
+  - THE iDOLM@STER - Cinderella Girls
  Honda Mio:
-  - THE iDOLM@STER: Cinderella Girls
+  - THE iDOLM@STER - Cinderella Girls
  Jougasaki Mika:
-  - THE iDOLM@STER: Cinderella Girls
+  - THE iDOLM@STER - Cinderella Girls
  Jougasaki Rika:
-  - THE iDOLM@STER: Cinderella Girls
+  - THE iDOLM@STER - Cinderella Girls
  Futaba Anzu:
-  - THE iDOLM@STER: Cinderella Girls
+  - THE iDOLM@STER - Cinderella Girls
  Moroboshi Kirari:
-  - THE iDOLM@STER: Cinderella Girls
+  - THE iDOLM@STER - Cinderella Girls
  Kanzaki Ranko:
-  - THE iDOLM@STER: Cinderella Girls
+  - THE iDOLM@STER - Cinderella Girls
  Anastasia:
-  - THE iDOLM@STER: Cinderella Girls
+  - THE iDOLM@STER - Cinderella Girls
   
 # Hibike! Euphonium
  Oumae Kumiko:
