--- a/waifu.yml
+++ b/waifu.yml
@@ -90,7 +90,7 @@
  Producer-san:
   - THE iDOLM@STER
   
-# THE iDOLM@STER: Cinderella Girls
+# THE iDOLM@STER - Cinderella Girls
  Shibuya Rin:
   - THE iDOLM@STER - Cinderella Girls
  Shimamura Uzuki:
@@ -135,6 +135,8 @@
   - Oreimo
  Ruri Gokou:
   - Oreimo
+ Kuroneko:
+  - Oreimo
   
 # K-ON!
  Akiyama Mio:
@@ -169,7 +171,13 @@
 # Ore no Seishun
  Isshiki Iroha:
   - Ore no Seishun
-
+ Yukinoshita Yukino:
+  - Ore no Seishun
+ Totsuka Saika:
+  - Ore no Seishun
+ Yuigahama Yui:
+  - Ore no Seishun
+  
 # Shakugan no Shana
  Shana:
   - Shakugan no Shana
@@ -186,6 +194,36 @@
   
 # JoJo's Bizarre Adventures
  Dio Brando:
+  - JoJo's Bizarre Adventures
+ Jonathan Joestar:
+  - JoJo's Bizarre Adventures
+ Robert Edward O. Speedwagon:
+  - JoJo's Bizarre Adventures
+ Joseph Joestar:
+  - JoJo's Bizarre Adventures
+ Caesar Zeppeli:
+  - JoJo's Bizarre Adventures
+ Rudol von Stroheim:
+  - JoJo's Bizarre Adventures
+ Esidisi:
+  - JoJo's Bizarre Adventures
+ Wamuu:
+  - JoJo's Bizarre Adventures
+ Kars:
+  - JoJo's Bizarre Adventures
+ Jotaru Kujo:
+  - JoJo's Bizarre Adventures
+ Star Platinum:
+  - JoJo's Bizarre Adventures
+ ZA WARUDO:
+  - JoJo's Bizarre Adventures
+ Vanilla Ice:
+  - JoJo's Bizarre Adventures
+ Josuke Higashikata:
+  - JoJo's Bizarre Adventures
+ Giorno Giovanna:
+  - JoJo's Bizarre Adventures
+ Diavolo:
   - JoJo's Bizarre Adventures
   
 # Jigoku Shoujo
@@ -231,4 +269,124 @@
   - Shokugeki no Soma
  Ikumi Mito:
   - Shokugeki no Soma
+  
+# Non Non Biyori
+ Hotaru Ichijo:
+  - Non Non Biyori
+ Renge Miyauchi:
+  - Non Non Biyori
+ Komari Koshigaya:
+  - Non Non Biyori
+ Natsumi Koshigaya:
+  - Non Non Biyori
+  
+# Suzumiya Haruhi no Yuutsu
+ Haruhi Suzumiya:
+  - Suzumiya Haruhi no Yuutsu
+ Yuki Nagato:
+  - Suzumiya Haruhi no Yuutsu
+ Mikuru Asahina:
+  - Suzumiya Haruhi no Yuutsu
+  
+# Himegoto
+ Hime Arikawa:
+  - Hime Goto
+  
+# Boku no Pico
+ Pico:
+  - Boku no Pico
+  
+# Yuru Yuri
+ Kyouko Toshinou:
+  - Yuru Yuri
+ Akari Akaza:
+  - Yuru Yuri
+ Yui Funami:
+  - Yuru Yuri
+ Chinatsu Yosikawa:
+  - Yuru Yuri
+  
+# TYPE-MOON
+ Artoria Pendragon:
+  - TYPE-MOON
+ Nero:
+  - TYPE-MOON
+ Siegfried:
+  - TYPE-MOON
+ Mordred:
+  - TYPE-MOON
+ Saber Lily:
+  - TYPE-MOON
+ Saber Lion:
+  - TYPE-MOON
+ Saber Alter:
+  - TYPE-MOON
+ Sakura Saber:
+  - TYPE-MOON
+ Archer:
+  - TYPE-MOON
+ Gilgamesh:
+  - TYPE-MOON
+ Alexander:
+  - TYPE-MOON
+ Rider:
+  - TYPE-MOON
+ Jack the Ripper:
+  - TYPE-MOON
+ Semiramis:
+  - TYPE-MOON
+ Rin Tohsaka:
+  - TYPE-MOON
+ Sakura Matou:
+  - TYPE-MOON
+ Illyasviel von Einzbern:
+  - TYPE-MOON
+ Shiki Ryougi:
+  - TYPE-MOON
+  
+# Hyperdimension Neptunia
+ Neptune:
+  - Hyperdimension Neptunia
+ Plutia:
+  - Hyperdimension Neptunia
+ Noire:
+  - Hyperdimension Neptunia
+ Nepgear:
+  - Hyperdimension Neptunia
+ Blanc:
+  - Hyperdimension Neptunia
+ Vert:
+  - Hyperdimension Neptunia
+ Peashy:
+  - Hyperdimension Neptunia
+ Uzume Tennouboshi:
+  - Hyperdimension Neptunia
+  
+# Arpeggio of Blue Steel
+ Takao:
+  - Arpeggio of Blue Steel
+ Iona:
+  - Arpeggio of Blue Steel
+ Haruna:
+  - Arpeggio of Blue Steel
+ Kirishima:
+  - Arpeggio of Blue Steel
+ Maya:
+  - Arpeggio of Blue Steel
+ Kongou:
+  - Arpeggio of Blue Steel
+  
+# Vocaloid
+ Hatsune Miku:
+  - Vocaloid
+ GUMI:
+  - Vocaloid
+ Megurine Luka:
+  - Vocaloid
+ Kagamine Rin:
+  - Vocaloid
+ Kagamine Len:
+  - Vocaloid
+ IA:
+  - Vocaloid
   
