--- a/waifu.yml
+++ b/waifu.yml
@@ -308,41 +308,47 @@
   
 # TYPE-MOON
  Artoria Pendragon:
-  - TYPE-MOON
+  - Fate/stay night
  Nero:
-  - TYPE-MOON
+  - Fate/Extra
  Siegfried:
-  - TYPE-MOON
+  - Fate/Apocrypha
  Mordred:
-  - TYPE-MOON
+  - Fate/Apocrypha
+ Saber:
+  - Fate/stay night
+ Saber of Red:
+  - Fate/Apocrypha
+ Saber of Black:
+  - Fate/Apocrypha
  Saber Lily:
-  - TYPE-MOON
+  - Fate/Grand Order
  Saber Lion:
-  - TYPE-MOON
+  - Fate/tiger colosseum
  Saber Alter:
-  - TYPE-MOON
+  - Fate/stay night - Heaven's Feel
  Sakura Saber:
-  - TYPE-MOON
+  - Fate
  Archer:
-  - TYPE-MOON
+  - Fate/stay night - Unlimited Blade Works
  Gilgamesh:
-  - TYPE-MOON
+  - Fate/Zero
  Alexander:
-  - TYPE-MOON
+  - Fate/Zero
  Rider:
-  - TYPE-MOON
+  - Fate/stay night
  Jack the Ripper:
-  - TYPE-MOON
+  - Fate/Apocrypha
  Semiramis:
-  - TYPE-MOON
+  - Fate/Apocrypha
  Rin Tohsaka:
-  - TYPE-MOON
+  - Fate/stay night
  Sakura Matou:
-  - TYPE-MOON
+  - Fate/stay night - Heaven's Feel
  Illyasviel von Einzbern:
-  - TYPE-MOON
+  - Fate/stay night
  Shiki Ryougi:
-  - TYPE-MOON
+  - Kara no Kyoukai
   
 # Hyperdimension Neptunia
  Neptune:
