--- a/waifu.yml
+++ b/waifu.yml
@@ -389,17 +389,31 @@
 # Hyperdimension Neptunia
  Neptune:
   - Hyperdimension Neptunia
- Plutia:
+ Purple Heart:
+  - Hyperdimension Neptunia
+ Pururut:
+  - Hyperdimension Neptunia
+ Iris Heart:
   - Hyperdimension Neptunia
  Noire:
   - Hyperdimension Neptunia
+ Black Heart:
+  - Hyperdimension Neptunia
  Nepgear:
+  - Hyperdimension Neptunia
+ Purple Sister:
   - Hyperdimension Neptunia
  Blanc:
   - Hyperdimension Neptunia
+ White Heart:
+  - Hyperdimension Neptunia
  Vert:
   - Hyperdimension Neptunia
+ Green Heart:
+  - Hyperdimension Neptunia
  Peashy:
+  - Hyperdimension Neptunia
+ Yellow Heart:
   - Hyperdimension Neptunia
  Tennouboushi Uzume:
   - Hyperdimension Neptunia
@@ -492,4 +506,83 @@
  Takagi Saya:
   - Highshool of The Dead
   
+# Ore, Twintails ni Narimasu
+ Mitsuka Souji:
+  - Ore, Twintails ni Narimasu
+ Tail Red:
+  - Ore, Twintails ni Narimasu
+ Tsube Aika:
+  - Ore, Twintails ni Narimasu
+ Blue Tail:
+  - Ore, Twintails ni Narimasu
+ Shindou Erina:
+  - Ore, Twintails ni Narimasu
+ Yellow Tail:
+  - Ore, Twintails ni Narimasu
+ Thouars:
+  - Ore, Twintails ni Narimasu
+  
+# Mobile Suit Gundam
+ Sayla Mass:
+  - Mobile Suit Gundam
+ Crowley Hamon:
+  - Mobile Suit Gundam
+ Artesia Som Deikun:
+  - Mobile Suit Gundam
+ Lalah Sune:
+  - Mobile Suit Gundam
+ Kycilia Zabi:
+  - Mobile Suit Gundam
+ Haman Karn:
+  - Mobile Suit Zeta Gundam
+ Mineva Lao Zabi:
+  - Mobile Suit Gundam Unicorn
+ Audrey Burne:
+  - Mobile Suit Gundam Unicorn
+ Marida Cruz:
+  - Mobile Suit Gundam Unicorn
+  
+# Steins;Gate
+ Makise Kurisu:
+  - Steins;Gate
+ Shiina Mayuri:
+  - Steins;Gate
+ Amane Suzuha:
+  - Steins;Gate
+  
+# Saya no Uta
+ Saya:
+  - Saya no Uta
+  
+# Mekakucity Actors
+ Kozakura Mary:
+  - Mekakucity Actors
+ Kido Tsubomi:
+  - Mekakucity Actors
+ Kisaragi Momo:
+  - Mekakucity Actors
+ Tateyama Ayano:
+  - Mekakucity Actors
+ Enomoto Takane:
+  - Mekakucity Actors
+  
+# Tokyo Ghoul
+ Kirishima Touka:
+  - Tokyo Ghoul
+ Kamishiro Rize:
+  - Tokyo Ghoul
+ Itori:
+  - Tokyo Ghoul
+ Eto:
+  - Tokyo Ghoul
+ Takatsuki Sen:
+  - Tokyo Ghoul
+ Mado Akira:
+  - Tokyo Ghoul
+ Sasaki Haise:
+  - Tokyo Ghoul
+ Fueguchi Hinami:
+  - Tokyo Ghoul
+ Suzuya Juuzou:
+  - Tokyo Ghoul
   
